29/05/2025	20:50	Daniele Chiarion	Finished shopping cart-page. It needs to be checked.
29/05/2025	21:23	Daniele Chiarion	Add first part profile page to complete.
30/05/2025	17:11	Daniele Chiarion	Complete .js part to manage the profile page.
30/05/2025	17:55	Daniele Chiarion	Complete .js part for the purchase list of the user.
30/05/2025	21:03	Daniele Chiarion	Complete .js code for car-configurator. 
02/06/2025	17:55	Daniele Chiarion	Fix bug color purchaseList.
02/06/2025	18:10	Daniele Chiarion	Add .js file for car-details tools. 
02/06/2025	21:16	Daniele Chiarion	Started car-details page.
03/06/2025	10:33	Daniele Chiarion	Finished details page for the showroom. 
03/06/2025	11:20	Daniele Chiarion	Completed .js frontend part for the details of a car bought by the user.
03/06/2025	18:49	Daniele Chiarion	Completed .js code for theme page. 
03/06/2025	21:47	Daniele Chiarion	Completed .js for car search.
09/06/2025	16:47	Daniele Chiarion	Add contents in html to add items from .xlsx and .xls files.
10/06/2025	16:57	Daniele Chiarion	First attemp to download a brand file template succeeded. 
10/06/2025	17:06	Daniele Chiarion	Finished adding commands to download all the template files available.
10/06/2025	18:31	Daniele Chiarion	Completed sections to add brands by file. File name needs to be checked.
10/06/2025	16:00	Daniele Chiarion	Completed section to add optionals by file. When it's required a file input you can add a logo. 
12/06/2025	11:15	Daniele Chiarion	Completed writing the function to get the cars by the data of the spreadsheet. 
13/06/2025	15:33	Daniele Chiarion	Completed part of the site to add a car using files.
13/06/2025	15:57	Daniele Chiarion	Add modal for information about uploading content from files.
14/06/2025	16:45	Daniele Chiarion	Finished admin add items page with the possibility to add images as links by the graphic interface.
15/06/2025	11:20	Daniele Chiarion	Add html part for brand and optional in the admin page for changing items.