@@ -63,7 +63,7 @@
                 <div class="col-md-6">
                     <select class="form-select form-input-item" aria-label="Default select example" id="optional-choice-optional"></select>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6" id="optional-change-section">
                     <label for="exampleFormControlTextarea1" class="form-label form-input-item">Descrizione</label>
                     <textarea class="form-control form-input-item" id="input-optional-description" rows="3"></textarea><br>
                     <label for="customRange3" class="form-label form-input-item d-flex justify-content-between align-items-center">Prezzo <span class="range-value" id="output-optional-price"></span></label>
